# assearch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/assearch/: main.py
backend/src/assearch/api/: router.py
backend/src/data_pipeline/: cli.py  download_pipeline.py  pipeline.py
backend/tests/test_app/: test_health.py  test_search.py
frontend/: README.md  next.config.ts  package.json
frontend/app/: page.tsx
src/app/: main.py
src/app/api/routes/: health.py
src/assearch/api/routes/: health.py  search.py
src/assearch/schemas/: search.py
src/data_pipeline/: download.py  index.py  sources.py  transform.py
