[project]
name = "assearch"
version = "0.1.0"
description = "Fast search engine for french assocations"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Pierre LAPOLLA", email = "pro@pierrelapolla.com" },
]
keywords = []
classifiers = []
requires-python = ">=3.10"
dependencies = [
    "elasticsearch>=9.4.0",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
]

[project.urls]
Repository = "https://github.com/PierreLapolla/assearch"

[tool.fastapi]
entrypoint = "assearch.main:app"

[dependency-groups]
data-pipeline = [
    "pedros>=0.1.0",
    "polars>=1.36.1",
    "requests>=2.32.5",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "rich>=15.0.0",
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/assearch"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=assearch",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["assearch"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PL",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",
    "S101",
]
